fix scrollbar left

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,8 @@ main .left-navbar h4  {
 
 .scroll  {
     overflow: auto;
-    height: 42vh;
+    min-height: 40vh;
+    height: calc(100vh - 400px);
 }
 
 .icon li img:active  {
